# orthofinder-coreselector

./: .gitignore  README.md  pyproject.toml
orthofinder_coreselector/: __init__.py  data_loading.py  init_orthofinder_arx.py  init_orthofinder_arx_split_proteins.py  main.py  plots.py
tests/: test_config_validation.py  test_data_loading.py  test_integration.py  test_main_functions.py  test_orthofinder_coreselector.py  test_plots_edge_cases.py  test_visualization.py
