[project]
name = "orthofinder-coreselector"
version = "0.1.0"
description = "Automated Core Set Selector for OrthoFinder v3"
authors = [
    {name = "Thomas Roder"}
]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "fire>=0.5.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "schema>=0.7.7",
    "arx-tools>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orthofinder_coreselector"]

[project.scripts]
orthofinder-coreselector = "orthofinder_coreselector.main:main"
orthofinder-coreselector-arx = "orthofinder_coreselector.init_orthofinder_arx:main"
orthofinder-coreselector-arx-split-proteins = "orthofinder_coreselector.init_orthofinder_arx_split_proteins:main"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731", "E501"]
